[tool.poetry]
name = "airflow test"
version = "0.1.0"
description = ""
authors = ["Satwik Ram <Satwik.Ram@isg-one.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = {version = "2.3.3", extras = ["celery"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
